tests/invalid/block_no_close_brace.c
int main() {
    {
        int x = 42;
        return x;
    // Missing closing brace
}
// ERROR: Line 7, Error 2004